--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -8,7 +8,7 @@ stages:
 
 cmake:
   stage: cmake
-#  only:
+  only:
 #    - master
 #    - merge_request
  script:
@@ -22,7 +22,7 @@ cmake:
       
 make:
   stage: build
-#  only:
+  only:
 #    - master
 #    - merge_request
   script:
@@ -40,7 +40,7 @@ make:
 
 test:
   stage: test
-#  only:
+  only:
 #    - master
 #    - merge_request
  script:
