--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -12,6 +12,7 @@
 
 
 stages:
+  - debpackages
   - cmake
   - build
   - test
@@ -22,7 +23,7 @@ stages:
 .plaftorms_template: &platforms_definition
   only:
     - master
-#   - merge_request
+    - merge_request
 
 # stage: cmake uses ccache for faster compilation. ccache works only with -DCHUNKSIZE=1
 # Important: to get ccache to work an external volume must be mounted by gitlab-runner (in config file: /etc/gitlab-runner/config.toml)
@@ -273,4 +274,14 @@ pages:
     paths:
       - public
 
+# image: registry.gitlab.com/yade-dev/docker-yade:ubuntu18.04
+# 6.1. build debian packages
+.debpackages_template: &debpackages_definition
+  <<: *platforms_definition
+  stage: debpackages
+  script:
+    - echo "AAA"
 
+debpackages_18_04:
+  <<: *check_definition
+  image: registry.gitlab.com/yade-dev/docker-yade:ubuntu18.04
