--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -31,12 +31,12 @@ stages:
   <<: *platforms_definition
   stage: debpackages
   script:
-    - echo AAA
+    - apt update && apt install devscripts
 
 debpackages_18_04:
   <<: *debpackages_definition
   image: registry.gitlab.com/yade-dev/docker-yade:ubuntu18.04
-  
+
 # stage: cmake uses ccache for faster compilation. ccache works only with -DCHUNKSIZE=1
 # Important: to get ccache to work an external volume must be mounted by gitlab-runner (in config file: /etc/gitlab-runner/config.toml)
 #            into docker directory /root/.ccache. By default in /etc/gitlab-runner/config.toml there is already this line:
