--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -27,7 +27,7 @@ stages:
   <<: *platforms_definition
   stage: debpackages
   script:
-    - git clone git@gitlab.com:yade-dev/yadedaily.git
+    - git clone https://gitlab.com/yade-dev/yadedaily.git
     - apt update && apt install devscripts
 
 debpackages_18_04:
