--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -29,7 +29,8 @@ stages:
   script:
     - apt update && apt install devscripts atool -y
     - git clone https://gitlab.com/yade-dev/yadedaily.git -b testdebpackages debian
-    - gbp buildpackage --git-ignore-branch --git-ignore-new
+    - dpkg-buildpackage -j8
+#    - gbp buildpackage --git-ignore-branch --git-ignore-new
 #    - gbp dch --ignore-branch --since=2019.01a
 
 debpackages_18_04:
