--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -27,8 +27,8 @@ stages:
   <<: *platforms_definition
   stage: debpackages
   script:
-    - apt update && apt install devscripts atool -y && ls -l && apt-get -y build-dep yade
     - git clone https://gitlab.com/yade-dev/yadedaily.git -b testdebpackages debian
+    - apt update && apt install devscripts atool -y && ls -l && apt-get -y build-dep .
     - dpkg-buildpackage -j8
 #    - gbp buildpackage --git-ignore-branch --git-ignore-new
 #    - gbp dch --ignore-branch --since=2019.01a
