--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -27,6 +27,7 @@ stages:
   <<: *platforms_definition
   stage: debpackages
   script:
+    - ls -l && ls -l debian/
     - gbp buildpackage --git-ignore-branch --git-ignore-new --no-sign --git-upstream-tree=master --git-debian-branch=feature/dailypackages
 
 debpackages_18_04:
