--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -27,11 +27,11 @@ stages:
   <<: *platforms_definition
   stage: debpackages
   script:
-    - apt-get update
-    - apt-get -y build-dep .
+#    - apt-get update
+#    - apt-get -y build-dep .
     - ls -l
     - ls -l debian
-    - gbp buildpackage --git-ignore-branch --git-debian-branch="feature/dailypackages" --git-upstream-branch="master" --no-sign
+    - gbp buildpackage --git-ignore-branch --git-debian-branch="feature/dailypackages" --git-upstream-tree="master" --no-sign
 
 debpackages_18_04:
   <<: *debpackages_definition
