--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -31,7 +31,7 @@ stages:
 #    - apt-get -y build-dep .
     - ls -l
     - ls -l debian
-    - gbp buildpackage --git-ignore-branch --git-debian-branch="feature/dailypackages" --git-upstream-tree="master" --git-verbose --no-sign
+    - gbp buildpackage --git-ignore-branch --git-export-dir=../deb --git-debian-branch="feature/dailypackages" --git-upstream-tree="master" --git-verbose --no-sign
 
 debpackages_18_04:
   <<: *debpackages_definition
