--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -30,7 +30,7 @@ stages:
     - apt-get update
     - apt-get -y build-dep .
     - dpkg-buildpackage
-    - #gbp buildpackage --git-ignore-branch --git-force-create --git-export-dir=../deb --git-debian-branch="feature/dailypackages" --git-upstream-tree="master" --git-verbose --no-sign
+#    - gbp buildpackage --git-ignore-branch --git-force-create --git-export-dir=../deb --git-debian-branch="feature/dailypackages" --git-upstream-tree="master" --git-verbose --no-sign
 
 debpackages_18_04:
   <<: *debpackages_definition
