--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -27,9 +27,7 @@ stages:
   <<: *platforms_definition
   stage: debpackages
   script:
-    - apt-get update
-    - apt-get -y build-dep .
-    - gbp buildpackage --git-ignore-branch --git-debian-branch=feature/dailypackages --git-upstream-tree=2019.01a --git-verbose --no-sign
+    - gbp buildpackage --git-ignore-branch --git-debian-branch=feature/dailypackages --git-upstream-tree=origin/master --git-verbose --no-sign
 
 debpackages_18_04:
   <<: *debpackages_definition
