--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -27,6 +27,8 @@ stages:
   <<: *platforms_definition
   stage: debpackages
   script:
+    - apt-get update
+    - apt-get -y build-dep .
     - gbp buildpackage --git-ignore-branch --git-debian-branch=feature/dailypackages --git-upstream-tree=origin/master --git-verbose --no-sign
 
 debpackages_18_04:
