--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -30,7 +30,7 @@ stages:
     - apt-get update
     - apt-get -y build-dep .
     - git merge origin/master
-    - gbp buildpackage --git-ignore-branch --git-ignore-new --git-upstream-tree=master --git-verbose --no-sign
+    - gbp buildpackage --git-ignore-branch --git-ignore-new --git-verbose --no-sign
 
 debpackages_18_04:
   <<: *debpackages_definition
