--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -33,7 +33,7 @@ stages:
     - apt-get update
     - apt-get -y build-dep .
     - tar cfJ ../yadedaily_2019.01a.orig.tar.xz  --exclude "debian" --exclude ".git" .
-    - dpkg-buildpackage -j8
+    - dpkg-buildpackage
 #    - gbp buildpackage --git-ignore-branch --git-ignore-new --git-debian-branch=feature/dailypackages --git-upstream-tree=origin/master --git-verbose --no-sign
 
 debpackages_18_04:
