building TWOPHASEFLOW depends on PFVFLOW

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -337,12 +337,12 @@ ELSE(ENABLE_GUI)
 ENDIF(ENABLE_GUI)
 #===========================================================
 # This one will automatically enable CGAL
-IF(ENABLE_PFVFLOW OR ENABLE_TWOPHASEFLOW)
+IF(ENABLE_PFVFLOW AND ENABLE_TWOPHASEFLOW)
   IF (NOT ENABLE_CGAL)
     MESSAGE(STATUS "PFVFLOW and TWOPHASEFLOW depends on CGAL, attempting to turn ENABLE_CGAL ON")
     SET(ENABLE_CGAL ON)
   ENDIF (NOT ENABLE_CGAL)
-ENDIF(ENABLE_PFVFLOW OR ENABLE_TWOPHASEFLOW)
+ENDIF(ENABLE_PFVFLOW AND ENABLE_TWOPHASEFLOW)
 #===========================================================
 IF(ENABLE_CGAL)
   INCLUDE(FindGMP)
