--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -337,12 +337,12 @@ ELSE(ENABLE_GUI)
 ENDIF(ENABLE_GUI)
 #===========================================================
 # This one will automatically enable CGAL
-IF(ENABLE_PFVFLOW AND ENABLE_TWOPHASEFLOW)
+IF(ENABLE_PFVFLOW OR ENABLE_TWOPHASEFLOW)
   IF (NOT ENABLE_CGAL)
     MESSAGE(STATUS "PFVFLOW and TWOPHASEFLOW depends on CGAL, attempting to turn ENABLE_CGAL ON")
     SET(ENABLE_CGAL ON)
   ENDIF (NOT ENABLE_CGAL)
-ENDIF(ENABLE_PFVFLOW AND ENABLE_TWOPHASEFLOW)
+ENDIF(ENABLE_PFVFLOW OR ENABLE_TWOPHASEFLOW)
 #===========================================================
 IF(ENABLE_CGAL)
   INCLUDE(FindGMP)
@@ -442,8 +442,13 @@ ELSE(ENABLE_MPI)
 ENDIF(ENABLE_MPI)
 #===============================================
 IF(ENABLE_TWOPHASEFLOW)
-	SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -DTWOPHASEFLOW")
-	SET(CONFIGURED_FEATS "${CONFIGURED_FEATS} TWOPHASEFLOW")
+	IF(ENABLE_PFVFLOW)
+		SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -DTWOPHASEFLOW")
+		SET(CONFIGURED_FEATS "${CONFIGURED_FEATS} TWOPHASEFLOW")
+	ELSE(ENABLE_PFVFLOW)
+		SET(DISABLED_FEATS "${DISABLED_FEATS} TWOPHASEFLOW")
+		MESSAGE(STATUS "PFVFLOW disabled, TWOPHASEFLOW will not be compiled")
+	ENDIF(ENABLE_PFVFLOW)
 ELSE(ENABLE_TWOPHASEFLOW)
 	SET(DISABLED_FEATS "${DISABLED_FEATS} TWOPHASEFLOW")
 ENDIF(ENABLE_TWOPHASEFLOW)
