--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -29,6 +29,7 @@ stages:
     - mkdir deb
     - ./scripts/ppa_ci/builddeb.py -d "buster"
     - cd deb/yadedaily
+    - apt-get update && apt-get -y build-dep .
     - dpkg-buildpackage -j16
     - cd ..
     - rm -rf yadedaily
