--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -25,7 +25,19 @@ stages:
   after_script:
     - cd deb/yadedaily
     - apt-get update && apt-get -y build-dep .
-    - dpkg-buildpackage -j16
+    - export JOBSNUM=$(case $CI_RUNNER_DESCRIPTION in
+        "y_4pak_64cpu_256RAM_4TB_docker") echo "43" ;;
+        "c_4pak_64cpu_256RAM_4TB_docker") echo "43" ;;
+        "y_6pak_48cpu_128RAM_4TB_docker") echo "46" ;;
+        "c_6pak_48cpu_128RAM_4TB_docker") echo "46" ;;
+        "y_7pak_48cpu_128RAM_1TB_docker") echo "46" ;;
+        "c_7pak_48cpu_128RAM_1TB_docker") echo "46" ;;
+        "yade-runner") echo "12" ;;
+        "yade-runner-01") echo "1" ;;
+        *) echo "8";;
+        esac)
+    - echo $JOBSNUM
+    - dpkg-buildpackage -j$JOBSNUM
     - cd ..
     - rm -rf yadedaily
     - ls -l
@@ -34,9 +46,14 @@ stages:
       - deb
     expire_in: 2 weeks
 
-debpackages_18_04:
+debpackages_buster:
   <<: *debpackages_definition
   image: registry.gitlab.com/yade-dev/docker-yade:debian-buster
   script:
     - ./scripts/ppa_ci/builddeb.py -d "buster"
-  #image: registry.gitlab.com/yade-dev/docker-yade:ubuntu18.04
+
+debpackages_18_04:
+  <<: *debpackages_definition
+  image: registry.gitlab.com/yade-dev/docker-yade:ubuntu18.04
+  script:
+    - ./scripts/ppa_ci/builddeb.py -d "bionic"
