--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -26,12 +26,12 @@ stages:
     - cd deb/yadedaily
     - apt-get update && apt-get -y build-dep .
     - export JOBSNUM=$(case $CI_RUNNER_DESCRIPTION in
-        "y_4pak_64cpu_256RAM_4TB_docker") echo "43" ;;
-        "c_4pak_64cpu_256RAM_4TB_docker") echo "43" ;;
-        "y_6pak_48cpu_128RAM_4TB_docker") echo "46" ;;
-        "c_6pak_48cpu_128RAM_4TB_docker") echo "46" ;;
-        "y_7pak_48cpu_128RAM_1TB_docker") echo "46" ;;
-        "c_7pak_48cpu_128RAM_1TB_docker") echo "46" ;;
+        "y_4pak_64cpu_256RAM_4TB_docker") echo "12" ;;
+        "c_4pak_64cpu_256RAM_4TB_docker") echo "12" ;;
+        "y_6pak_48cpu_128RAM_4TB_docker") echo "12" ;;
+        "c_6pak_48cpu_128RAM_4TB_docker") echo "12" ;;
+        "y_7pak_48cpu_128RAM_1TB_docker") echo "12" ;;
+        "c_7pak_48cpu_128RAM_1TB_docker") echo "12" ;;
         "yade-runner") echo "12" ;;
         "yade-runner-01") echo "1" ;;
         *) echo "8";;
@@ -51,6 +51,12 @@ deb_buster:
   image: registry.gitlab.com/yade-dev/docker-yade:debian-buster
   script:
     - ./scripts/ppa_ci/builddeb.py -d "buster"
+
+deb_stretch:
+  <<: *deb_definition
+  image: registry.gitlab.com/yade-dev/docker-yade:debian-stretch
+  script:
+    - ./scripts/ppa_ci/builddeb.py -d "stretch"
 
 deb_18_04:
   <<: *deb_definition
