--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -20,9 +20,7 @@ stages:
   stage: deb
   only:
     - branches
-  before_script:
-    - mkdir deb
-  after_script:
+  script:
     - cd deb/yadedaily
     - apt-get update && apt-get -y build-dep .
     - export JOBSNUM=$(case $CI_RUNNER_DESCRIPTION in
@@ -44,22 +42,11 @@ stages:
   artifacts:
     paths:
       - deb
-    expire_in: 2 weeks
-
-deb_buster:
-  <<: *deb_definition
-  image: registry.gitlab.com/yade-dev/docker-yade:debian-buster
-  script:
-    - ./scripts/ppa_ci/builddeb.py -d "buster"
+    expire_in: 2 hours
 
 deb_stretch:
   <<: *deb_definition
   image: registry.gitlab.com/yade-dev/docker-yade:debian-stretch
-  script:
+  before_script:
+    - mkdir deb
     - ./scripts/ppa_ci/builddeb.py -d "stretch"
-
-deb_18_04:
-  <<: *deb_definition
-  image: registry.gitlab.com/yade-dev/docker-yade:ubuntu18.04
-  script:
-    - ./scripts/ppa_ci/builddeb.py -d "bionic"
