--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -49,3 +49,15 @@ deb_buster:
   image: registry.gitlab.com/yade-dev/docker-yade:debian-buster
   before_script:
     - ./scripts/ppa_ci/builddeb.py -d "buster"
+
+deb_stretch:
+  <<: *deb_definition
+  image: registry.gitlab.com/yade-dev/docker-yade:debian-stretch
+  before_script:
+    - ./scripts/ppa_ci/builddeb.py -d "stretch"
+
+deb_18_04:
+  <<: *deb_definition
+  image: registry.gitlab.com/yade-dev/docker-yade:ubuntu18.04
+  before_script:
+    - ./scripts/ppa_ci/builddeb.py -d "bionic"
