--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -21,15 +21,14 @@ stages:
   only:
     - branches
   script:
-    - cd deb/yadedaily
     - apt-get update && apt-get -y build-dep .
     - export JOBSNUM=$(case $CI_RUNNER_DESCRIPTION in
-        "y_4pak_64cpu_256RAM_4TB_docker") echo "42" ;;
-        "c_4pak_64cpu_256RAM_4TB_docker") echo "42" ;;
-        "y_6pak_48cpu_128RAM_4TB_docker") echo "42" ;;
-        "c_6pak_48cpu_128RAM_4TB_docker") echo "42" ;;
-        "y_7pak_48cpu_128RAM_1TB_docker") echo "42" ;;
-        "c_7pak_48cpu_128RAM_1TB_docker") echo "42" ;;
+        "y_4pak_64cpu_256RAM_4TB_docker") echo "43" ;;
+        "c_4pak_64cpu_256RAM_4TB_docker") echo "43" ;;
+        "y_6pak_48cpu_128RAM_4TB_docker") echo "46" ;;
+        "c_6pak_48cpu_128RAM_4TB_docker") echo "46" ;;
+        "y_7pak_48cpu_128RAM_1TB_docker") echo "46" ;;
+        "c_7pak_48cpu_128RAM_1TB_docker") echo "46" ;;
         "yade-runner") echo "12" ;;
         "yade-runner-01") echo "1" ;;
         *) echo "8";;
@@ -39,9 +38,7 @@ stages:
     - cd ..
     - rm -rf yadedaily
     - ls -l
-  artifacts:
-    paths:
-      - deb
+
     expire_in: 2 hours
 
 deb_buster:
@@ -49,15 +46,7 @@ deb_buster:
   image: registry.gitlab.com/yade-dev/docker-yade:debian-buster
   before_script:
     - ./scripts/ppa_ci/builddeb.py -d "buster"
-
-deb_stretch:
-  <<: *deb_definition
-  image: registry.gitlab.com/yade-dev/docker-yade:debian-stretch
-  before_script:
-    - ./scripts/ppa_ci/builddeb.py -d "stretch"
-
-deb_18_04:
-  <<: *deb_definition
-  image: registry.gitlab.com/yade-dev/docker-yade:ubuntu18.04
-  before_script:
-    - ./scripts/ppa_ci/builddeb.py -d "bionic"
+    - cd deb_buster/yadedaily
+    artifacts:
+    paths:
+      - ../deb_buster
