--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -21,6 +21,7 @@ stages:
   only:
     - branches
   script:
+    - cd deb/yadedaily
     - apt-get update && apt-get -y build-dep .
     - export JOBSNUM=$(case $CI_RUNNER_DESCRIPTION in
         "y_4pak_64cpu_256RAM_4TB_docker") echo "42" ;;
@@ -38,7 +39,9 @@ stages:
     - cd ..
     - rm -rf yadedaily
     - ls -l
-
+  artifacts:
+    paths:
+      - deb
     expire_in: 2 hours
 
 deb_buster:
@@ -46,7 +49,3 @@ deb_buster:
   image: registry.gitlab.com/yade-dev/docker-yade:debian-buster
   before_script:
     - ./scripts/ppa_ci/builddeb.py -d "buster"
-    - cd deb_buster/yadedaily
-    artifacts:
-    paths:
-      - ../deb_buster
