--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -50,3 +50,27 @@ deb_buster:
     paths:
       - ../deb_buster
     expire_in: 2 hours
+
+deb_stretch:
+  <<: *deb_definition
+  image: registry.gitlab.com/yade-dev/docker-yade:debian-stretch
+  before_script:
+    - rm -rf ../deb_stretch
+    - ./scripts/ppa_ci/builddeb.py -d "stretch"
+    - cd ../deb_stretch/yadedaily
+  artifacts:
+    paths:
+      - ../deb_stretch
+    expire_in: 2 hours
+
+deb_bionic:
+  <<: *deb_definition
+  image: registry.gitlab.com/yade-dev/docker-yade:ubuntu18.04
+  before_script:
+    - rm -rf ../deb_bionic
+    - ./scripts/ppa_ci/builddeb.py -d "bionic"
+    - cd ../deb_bionic/yadedaily
+  artifacts:
+    paths:
+      - ../deb_bionic
+    expire_in: 2 hours
