--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -21,6 +21,7 @@
 #  ENABLE_LIQMIGRATION: enable LIQMIGRATION-option, see [Mani2013] for details (OFF by default)
 #  ENABLE_MASK_ARBITRARY: enable MASK_ARBITRARY option (OFF by default)
 #  ENABLE_PROFILING: enable profiling, e.g. shows some more metrics, which can define bottlenecks of the code (OFF by default)
+#  ENABLE_POTENTIAL_BLOCKS: enable potential blocks option (OFF by default)
 #  ENABLE_POTENTIAL_PARTICLES: enable potential particles option (OFF by default)
 #  ENABLE_DEFORM: enable constant volume deformation engine (OFF by default)
 #  ENABLE_OAR: generate a script for oar-based task scheduler (OFF by default)
@@ -632,9 +633,9 @@ FILE(GLOB SRC_LIB  "lib/*.cpp")
 
 SET(SRC_LIB "${SRC_LIB};lib/base/Math.cpp;lib/factory/ClassFactory.cpp;lib/factory/DynLibManager.cpp")
 SET(SRC_LIB "${SRC_LIB};lib/serialization/Serializable.cpp;lib/pyutil/gil.cpp;core/main/pyboot.cpp;${GUI_SRC_LIB};${CGAL_SRC_LIB}")
-IF(ENABLE_POTENTIAL_PARTICLES)
+IF(ENABLE_POTENTIAL_PARTICLES OR ENABLE_POTENTIAL_BLOCKS)
   SET(SRC_LIB "${SRC_LIB};lib/computational-geometry/MarchingCube.cpp")
-ENDIF(ENABLE_POTENTIAL_PARTICLES)
+ENDIF(ENABLE_POTENTIAL_PARTICLES OR ENABLE_POTENTIAL_BLOCKS)
 
 #===========================================================
 
