--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -21,6 +21,7 @@ stages:
   only:
     - branches
   script:
+    - cd ./deb/yadedaily
     - apt-get update && apt-get -y build-dep .
     - export JOBSNUM=$(case $CI_RUNNER_DESCRIPTION in
         "y_4pak_64cpu_256RAM_4TB_docker") echo "42" ;;
@@ -38,6 +39,10 @@ stages:
     - cd ..
     - rm -rf yadedaily
     - ls -l
+  artifacts:
+    paths:
+      - ./deb
+    expire_in: 1 week
 
 deb_buster:
   <<: *deb_definition
@@ -45,11 +50,7 @@ deb_buster:
   before_script:
     - rm -rf ./deb
     - ./scripts/ppa_ci/builddeb.py -d "buster"
-    - cd ./deb/yadedaily
-  artifacts:
-    paths:
-      - ./deb
-    expire_in: 2 hours
+
 
 deb_stretch:
   <<: *deb_definition
@@ -57,11 +58,7 @@ deb_stretch:
   before_script:
     - rm -rf ./deb
     - ./scripts/ppa_ci/builddeb.py -d "stretch"
-    - cd ./deb/yadedaily
-  artifacts:
-    paths:
-      - ./deb
-    expire_in: 2 hours
+
 
 deb_bionic:
   <<: *deb_definition
@@ -69,8 +66,3 @@ deb_bionic:
   before_script:
     - rm -rf ./deb
     - ./scripts/ppa_ci/builddeb.py -d "bionic"
-    - cd ./deb/yadedaily
-  artifacts:
-    paths:
-      - ./deb
-    expire_in: 2 hours
