--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -21,56 +21,49 @@ stages:
   only:
     - branches
   script:
+    - cd ./deb/yadedaily
     - apt-get update && apt-get -y build-dep .
+    - export CC="ccache gcc"
+    - export CXX="ccache g++"
     - export JOBSNUM=$(case $CI_RUNNER_DESCRIPTION in
-        "y_4pak_64cpu_256RAM_4TB_docker") echo "42" ;;
-        "c_4pak_64cpu_256RAM_4TB_docker") echo "42" ;;
-        "y_6pak_48cpu_128RAM_4TB_docker") echo "42" ;;
-        "c_6pak_48cpu_128RAM_4TB_docker") echo "42" ;;
-        "y_7pak_48cpu_128RAM_1TB_docker") echo "42" ;;
-        "c_7pak_48cpu_128RAM_1TB_docker") echo "42" ;;
+        "y_4pak_64cpu_256RAM_4TB_docker") echo "43" ;;
+        "c_4pak_64cpu_256RAM_4TB_docker") echo "43" ;;
+        "y_6pak_48cpu_128RAM_4TB_docker") echo "46" ;;
+        "c_6pak_48cpu_128RAM_4TB_docker") echo "46" ;;
+        "y_7pak_48cpu_128RAM_1TB_docker") echo "46" ;;
+        "c_7pak_48cpu_128RAM_1TB_docker") echo "46" ;;
         "yade-runner") echo "12" ;;
         "yade-runner-01") echo "1" ;;
         *) echo "8";;
         esac)
     - echo $JOBSNUM
+    - echo "max_size = 100.0G" > ~/.ccache/ccache.conf
     - dpkg-buildpackage -j$JOBSNUM
     - cd ..
     - rm -rf yadedaily
     - ls -l
+  artifacts:
+    paths:
+      - ./deb
+    expire_in: 5 hours
 
 deb_buster:
   <<: *deb_definition
   image: registry.gitlab.com/yade-dev/docker-yade:debian-buster
   before_script:
-    - rm -rf ../deb_buster
+    - rm -rf ./deb
     - ./scripts/ppa_ci/builddeb.py -d "buster"
-    - cd ../deb_buster/yadedaily
-  artifacts:
-    paths:
-      - ../deb_buster
-    expire_in: 2 hours
 
 deb_stretch:
   <<: *deb_definition
   image: registry.gitlab.com/yade-dev/docker-yade:debian-stretch
   before_script:
-    - rm -rf ../deb_stretch
+    - rm -rf ./deb
     - ./scripts/ppa_ci/builddeb.py -d "stretch"
-    - cd ../deb_stretch/yadedaily
-  artifacts:
-    paths:
-      - ../deb_stretch
-    expire_in: 2 hours
 
 deb_bionic:
   <<: *deb_definition
   image: registry.gitlab.com/yade-dev/docker-yade:ubuntu18.04
   before_script:
-    - rm -rf ../deb_bionic
+    - rm -rf ./deb
     - ./scripts/ppa_ci/builddeb.py -d "bionic"
-    - cd ../deb_bionic/yadedaily
-  artifacts:
-    paths:
-      - ../deb_bionic
-    expire_in: 2 hours
